--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -74,7 +74,7 @@
                 <ColumnDefinition Width="290" />
             </Grid.ColumnDefinitions>
 
-            <Button x:Name ="Begin_Scan" Content="BEGIN SCAN" Margin="0,30,0,0" Style="{StaticResource KinectButton}" Grid.Row="0"/>
+            <Button x:Name ="Begin_Scan" Content="BEGIN SCAN" Margin="0,30,0,0" Style="{StaticResource KinectButton}" Grid.Row="0" Click="Begin_Scan_Click"/>
             <Button x:Name ="End_Scan" Content="END SCAN" Margin="154,30,0,0" Style="{StaticResource KinectButton}" Grid.Row="0" />
 
             <!--ModelNameArea-->
@@ -88,7 +88,7 @@
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
                 <Label x:Name="Name_Label" Content="MODEL NAME:" Foreground="{StaticResource SecondaryBrandBrush}" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="0" Margin="0,-3,0,0" />
-                <TextBox x:Name="Model_Name" HorizontalAlignment="Left" VerticalAlignment="Top" Width="140"  Margin="10,0,0,0" Grid.Column="1" />
+                <TextBox x:Name="Model_Name" Text="model.obj"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="140"  Margin="10,0,0,0" Grid.Column="1" />
             </Grid><!--EndModelNameArea-->
 
             <Grid x:Name="SliderArea" Background="White" Grid.Row="2" Margin="0,0,30,0">
